--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "react-transition-group": "^4.3.0",
     "scrollreveal": "^4.0.5",
     "smooth-scroll": "^16.1.0",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "html-react-parser": "^1.2.3"
   },
   "devDependencies": {
     "@upstatement/eslint-config": "0.4.3",
